# FastImaging

./: .gitignore  .gitmodules  Changelog.md  README.md  build.sh
src/: CMakeLists.txt
src/auxiliary/: CMakeLists.txt  conf_tests.json  fixtures.h  gaussian2d.cpp  gaussian2d.h  linear_interpolation.cpp  linear_interpolation.h  load_data.cpp  load_data.h  load_json_config.cpp  load_json_config.h  load_json_imager.cpp  load_json_imager.h  save_data.h  save_json_sf_output.cpp  save_json_sf_output.h
src/benchmark/: CMakeLists.txt  conv_benchmark.cpp  conv_test_benchmark.cpp  fft_benchmark.cpp  fft_c2r_benchmark.cpp  fft_r2c_benchmark.cpp  fftshift_benchmark.cpp  fixtures_test_benchmark.cpp  gridder_benchmark.cpp  gridder_convolution_benchmark.cpp  gridder_test_benchmark.cpp  imager_benchmark.cpp  imager_test_benchmark.cpp  interpolation_benchmark.cpp  kernel_benchmark.cpp  matrix_math_benchmark.cpp  median_benchmark.cpp  memset_benchmark.cpp  pipeline_benchmark.cpp  populate_kernel_cache_benchmark.cpp  sourcefind_benchmark.cpp  vector_math_benchmark.cpp  visibility_benchmark.cpp
src/gridder/src/: CMakeLists.txt  cppGridderPrototype.cpp  gridderprototype.cpp  gridderprototype.h  phasecorrection.cpp  phasecorrection.h
src/libstp/: CMakeLists.txt  libstp.h
src/libstp/common/: ccl.cpp  ccl.h  fft.cpp  fft.h  gaussian2d.cpp  gaussian2d.h
src/libstp/convolution/: conv_func.cpp  conv_func.h  kernel_func.cpp  kernel_func.h
src/libstp/fixtures/: fixtures.h
src/libstp/gridder/: gridder.cpp  gridder.h
src/libstp/pipeline/: pipeline.h
src/libstp/sourcefind/: sourcefind.cpp  sourcefind.h
src/reduce/: CMakeLists.txt  common_functions.cpp  common_functions.h  reduce.cpp  reduce.h  run_imager.cpp  run_imager.h  run_imagevis.cpp  run_imagevis.h  run_sourcefind.cpp  run_sourcefind.h
src/stp/: CMakeLists.txt  global_macros.h  stp.h  types.h
src/stp-python/: CMakeLists.txt  README.md  stp_python.cpp  stp_python.h
src/stp-runner/: CMakeLists.txt  README.md  loadData.cpp  load_data.cpp  mock_uvw_vis.npz  stp-runner.cpp  stp-runner.h  stp_runner.cpp  stp_runner.h
src/stp-runner/configuration_data/: configuration.json
src/stp/common/: ccl.cpp  ccl.h  fft.cpp  fft.h  gaussian2d.cpp  gaussian2d.h  matrix_math.cpp  matrix_math.h  matstp.h  spharmonics.cpp  spharmonics.h  spline.cpp  spline.h  vector_math.cpp  vector_math.h
src/stp/convolution/: conv_func.cpp  conv_func.h
src/stp/fixtures/: fixtures.h
src/stp/gridder/: aw_projection.cpp  aw_projection.h  gridder.cpp  gridder.h
src/stp/imager/: imager.cpp  imager.h
src/stp/pipeline/: pipeline.h
src/stp/sourcefind/: fitting.cpp  fitting.h  sourcefind.cpp  sourcefind.h
src/stp/visibility/: visibility.cpp  visibility.h
src/test/: CMakeLists.txt  conv_func_gaussian.cpp  conv_func_gaussiansinc.cpp  conv_func_sinc.cpp  conv_func_tophat.cpp  conv_func_triangle.cpp  kernel_func_OversampledPillbox.cpp  kernel_func_OversampledPillboxSmall.cpp  kernel_func_RegularSamplingPillbox.cpp  kernel_func_RegularSamplingTriangle.cpp
src/test/cnpy/: cnpy_test_complex.cpp  cnpy_test_float.cpp
src/test/cnpy_func/: cnpy_func_complex.cpp  cnpy_func_float.cpp
src/test/conv/: conv_test_gaussian.cpp  conv_test_gaussiansinc.cpp  conv_test_pswf.cpp  conv_test_sinc.cpp  conv_test_tophat.cpp  conv_test_triangle.cpp
src/test/conv_func/: conv_func_gaussian.cpp  conv_func_gaussiansinc.cpp  conv_func_sinc.cpp  conv_func_tophat.cpp  conv_func_triangle.cpp
src/test/fixtures/: fixtures_test_ModelGenerationEvaluation.cpp
src/test/gridder/: gridder_test_BoundsChecking.cpp  gridder_test_FractionalCoordIn2DCase.cpp  gridder_test_FractionalCoordToOversampledIndexMath.cpp  gridder_test_HalfPlaneShiftedGridding.cpp  gridder_test_KernelCaching.cpp  gridder_test_MultiPixelPillbox.cpp  gridder_test_MultipleComplexVis.cpp  gridder_test_NearbyComplexVis.cpp  gridder_test_OversampledGridding.cpp  gridder_test_SampleWeighting.cpp  gridder_test_SinglePixelOverlapPillbox.cpp  gridder_test_SmallPillbox.cpp  gridder_test_SteppedVsExactConvolution.cpp  gridder_test_Triangle.cpp
src/test/gridder_func/: gridder_func_BoundsChecking.cpp  gridder_func_FractionalCoordToOversampledIndexMath.cpp  gridder_func_MultiPixelPillbox.cpp  gridder_func_MultipleComplexVis.cpp  gridder_func_NearbyComplexVis.cpp  gridder_func_SinglePixelOverlapPillbox.cpp  gridder_func_SmallPillbox.cpp  gridder_func_SteppedVsExactConvolution.cpp  gridder_func_Triangle.cpp
src/test/imager/: imager_test_Gaussian.cpp  imager_test_GaussianSinc.cpp  imager_test_PSWF.cpp  imager_test_Sinc.cpp  imager_test_TopHat.cpp  imager_test_Triangle.cpp  load_json_imager.cpp  load_json_imager.h
src/test/interpolation/: linear_interpolation_test.cpp
src/test/kernel/: kernel_test_OversampledPillbox.cpp  kernel_test_OversampledPillboxSmall.cpp  kernel_test_RegularSamplingPillbox.cpp  kernel_test_RegularSamplingTriangle.cpp
src/test/kernel_func/: kernel_func_OversampledPillbox.cpp  kernel_func_OversampledPillboxSmall.cpp  kernel_func_RegularSamplingPillbox.cpp  kernel_func_RegularSamplingTriangle.cpp
src/test/matrixmath/: matrixmath_test_fftshift.cpp  matrixmath_test_inplacediv.cpp  matrixmath_test_median_funcs.cpp  matrixmath_test_rotate.cpp  matrixmath_test_stat_funcs.cpp  test_matrix_math_funcs.cpp  test_median_funcs.cpp
src/test/pipeline/: conf_tests.json  pipeline_func.h  pipeline_handler.h  pipeline_simple_test.cpp  pipeline_test_Gaussian.cpp  pipeline_test_GaussianSinc.cpp  pipeline_test_Sinc.cpp  pipeline_test_TopHat.cpp  pipeline_test_Triangle.cpp  pipeline_test_gaussiansinc.cpp  pipeline_wprojection_test.cpp
src/test/pipeline_func/: pipeline_func.h  pipeline_func_Gaussian.cpp  pipeline_func_GaussianSinc.cpp  pipeline_func_Sinc.cpp  pipeline_func_TopHat.cpp  pipeline_func_Triangle.cpp
src/test/sourcefind/: sourcefind_test_BasicSourceDetection.cpp  sourcefind_test_Fitting.cpp  sourcefind_test_Labeling.cpp  sourcefind_test_NegativeSourceDetection.cpp  sourcefind_test_RmsEstimation.cpp
src/test/vectormath/: test_vector_math_funcs.cpp
src/test/visibility/: visibility_test_ModelGeneration.cpp  (+1 more)
(+668 files in other folders)
